--- a/_sass/_darcula.scss
+++ b/_sass/_darcula.scss
@@ -1,12 +1,13 @@
 .highlight {
   background-color: #2B2B2B;
-  color: #A9B7C6; }
+  color: #A9B7C6;
+}
 .highlight pre {
-  background-color: #2B2B2B; }
+  background-color: #2B2B2B;
+}
 .highlight pre code {
-  background-color: #2B2B2B; }
-.highlight .lineno {
-  color: #888888; }
+  background-color: #2B2B2B;
+}
 .highlight {
   background: #2B2B2B; }
 .highlight .c {
