--- a/_includes/articles.html
+++ b/_includes/articles.html
@@ -1,10 +1,9 @@
 <article class="preview">
     <header>
-        {% include title.html %}
+        {% if page.title %}
+        <h2><a class="link-to-post" href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a></h2>
+        {% endif %}
         {% include post_meta.html %}
     </header>
-    <p>{{ page.content | strip_html | truncatewords: site.truncate_size | remove: '<p>' | remove: '</p>' }}
-    <a class="link-to-post"
-       href="{{ site.baseurl }}{{ page.url }}">&raquo;</a>
-    </p>
+    <p>{{ page.description }}</p>
 </article>
