--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
     <meta name="description" content="{{ page.description}}"/>
     {% endif %}
     <meta name="viewport" content="device=device-width, initial-scale=1"/>
-    <link rel="stylesheet" href="{{ site.baseurl }}/main.css"/>
+    <link rel="stylesheet" href="{{ site.baseurl }}/resources/css/main.css"/>
     {% if page.css %}
     <link rel="stylesheet" href="{{ site.baseurl }}{{ page.css }}"/>
     {% endif %}
