--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,9 @@ layout: default
 ---
 <article>
     <header>
-        {% include title.html %}
+        {% if page.title %}
+        <h1>{{ page.title }}</h1>
+        {% endif %}
         {% include post_meta.html %}
     </header>
     {{ page.content }}
