Apply small visual improvements to overall design
    - Remove logo from the header
    - Reduce font size of header navigation
    - Reduce paginator space between arrow and word
    - Increase space between list items in tagline

--- a/_sass/_border.scss
+++ b/_sass/_border.scss
@@ -1,3 +1,7 @@
+
+
+$b-w-sep: 0.3rem;
+
 /*************************************************************************
                              BORDER
 /*************************************************************************/
@@ -21,7 +25,7 @@ article > table th,
 
 //---------------------------WIDTH=4PX
 .sep {
-  border-width: 4px;
+  border-width: $b-w-sep;
 }
 
 /*************************************************************************
@@ -48,7 +52,7 @@ abbr {
 
 //---------------------------WIDTH=4PX
 article > blockquote {
-  border-left: 4px;
+  border-left: $b-w-sep;
 }
 
 //---------------------------STYLE
