--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,12 @@
 <header>
     <nav id="main-nav">
         <ul>
-            <li><a class="fancy-nav" href="{{ site.baseurl }}/index.html">home</a></li>
+            <li><a class="fancy-nav" href="/index.html">home</a></li>
             {% for link in site.categories %}
             <li><a class="fancy-nav" href="{{ site.baseurl }}/categories/{{ link | first | downcase }}">{{ link | first
                 }}</a></li>
             {% endfor %}
-            <li><a class="fancy-nav" href="{{ site.baseurl }}/pages/about.html">about</a></li>
+            <li><a class="fancy-nav" href="/pages/about.html">about</a></li>
         </ul>
     </nav>
 </header>
